--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,10 +3,13 @@
 <h1>Welcome to FlaskTaskr</h1>
 <h3>Please login to access your task list. </h3>
 <form method="post" action="/">
+	{{ form.csrf_token }}
+	<p>{{form.name.label}}: {{form.name}} &nbsp;&nbsp;{{form.password.label}}: {{form.password}}&nbsp;&nbsp;
+		<input type="submit" value="Submit"></p>
 	
-	Username: <input type="text" name="username" value="{{request.form.username}}">
-	Password: <input type="password" name="password" value="{{request.form.password}}">
-	<input type="submit" value="Login">
 </form>
-<p><em>Use 'admin' for the username and password.</em></p>
+
+
+<br>
+<p><em>Need an Account?</em><a href="/register">Signup!!</a></p>
 {%endblock%}
