--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -61,8 +61,9 @@ h2 {
 }
 
 .error {
-	background: : #F0D6D6;
-	padding: 0.5em
+	color: red;
+	background-color: ffffff;
+	padding: 0.8em;
 }
 
 .datagrid table{
