--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
- <head>
- 	<title>Welcome to FlaskTaskr</title>
- 	<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css')}}">
- </head>
- <body>
- 	<div class="page">
- 		{% for message in get_flashed_messages() %}
- 		  <div class="flash">{{ message}}</div>
- 		 {%endfor%}
- 		 {%if error %}
- 		   <div class="error"><strong>Error:</strong> {{ error }}</div>
- 		  {%endif%}
+  <head>
+    <title>Welcome to FlaskTaskr!!</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+  </head>
+  <body>
+    <div class="page">
+      {% for message in get_flashed_messages() %}
+        <div class="flash">{{ message }}</div>
+      {% endfor %}
+      {% if error %}
+        <div class="error"><strong>Error:</strong> {{ error }}</div>
+      {% endif %}
 
- 		  {%block content%}
- 		  {%endblock%}
+      {% block content %}
+      {% endblock %}
+
     </div>
   </body>
-</html>  
+</html>
